--- a/fletteconf.yaml
+++ b/fletteconf.yaml
@@ -1,3 +1,8 @@
 source: "docs/notebooks"
 target: "docs"
-inject: '<a href="https://github.com/r4lv/jpy-flette"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>'
+metadata: "docs/notebooks/metadata.csv"
+#inject: '<a href="https://github.com/r4lv/jpy-flette"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>'
+
+#source: "../TEST"
+#target: "../TO_GITHUB_PAGES"
+#metadata: ""
