--- a/fletteconf.yaml
+++ b/fletteconf.yaml
@@ -1,8 +1,20 @@
-source: "docs/notebooks"
-target: "docs"
-metadata: "docs/notebooks/metadata.csv"
-#inject: '<a href="https://github.com/r4lv/jpy-flette"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>'
+#
+#
+#    * source - the directory with the .ipynb notebooks
+#    * target - the directory with the .html files are relative to the configuration file
+#    * theme - selected theme formatting
+#    * title_prefix - 
+#    * title_suffix - 
+#    * title_sidebar - set to "<auto>", the sidebar title is set based on the first header of the first page (usually your 00.index.ipynb)
+#    * inject (HTML code) - copied at the end of every generated HTML file (before </body>)
+#
 
-#source: "../TEST"
-#target: "../TO_GITHUB_PAGES"
-#metadata: ""
+
+source: "../TEST"
+target: "../TO_GITHUB_PAGES"
+metadata: "../TEST/metadata.csv"
+theme: "flette"
+title_prefix: ""
+title_suffix: ""
+title_sidebar: ""
+inject: ""
